--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .navbar{
     background-image: linear-gradient(to right,
     rgb(21,45,81) 0%,
@@ -13,6 +19,7 @@
                     rgb(231,76,60) 0%,
                     rgb(255, 166, 0) 45%,
                     rgb(231,76,60)  100%); 
+    color: white;
     background-size: 200% auto; transition: 0.5s;
 }
 
@@ -20,4 +27,8 @@
 .btn:hover{
     background-position: right center;
     color: white;
+}
+
+.card{
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 10%), 0 4px 6px -2px rgb(0 0 0 / 5%);
 }
